--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-    <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
+<!--    <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>-->
 </head>
 
 <body>
@@ -8,16 +8,16 @@
 <pre id="output"></pre>
 
 <script>
-    url = 'ws://127.0.0.1:2333/ws';
+    url = 'ws://127.0.0.1:8888/api/v1/task/ws';
     c = new WebSocket(url);
 
     send = function(data){
-        $("#output").append((new Date())+ " ==> "+data+"\n")
+        console.log((new Date())+ " ==> "+data+"\n")
         c.send(data)
     }
 
     c.onmessage = function(msg){
-        $("#output").append((new Date())+ " <== "+msg.data+"\n")
+        console.log((new Date())+ " <== "+msg.data+"\n")
         console.log(msg)
     }
 
